# kaguya

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  ROAD.md  kaguya_plan.md
agent-ctx/: 6.2-6.3-main.md  phase3-gemm-kernels.md
benchmarks/: bench_gemm.cpp  bench_inference.cpp  bench_quantize.cpp
cmake/: DetectSIMD.cmake
include/kaguya/: attention.h  batch.h  common.h  context.h  cpu_features.h  gguf_loader.h  kaguya.h  kv_cache.h  memory_manager.h  model.h  model_loader.h  pipeline.h  profiler.h  sampling.h  tensor.h  tokenizer.h
include/kaguya/core/: context.h  engine.h  tensor.h
include/kaguya/kernels/: attention.h  cache_tuner.h  dispatcher.h  ffn.h  gemm.h  mul_mat.h  quantize.h  rmsnorm.h  rope.h  special_ops.h  transformer.h
include/kaguya/memory/: buf_manager.h  kv_cache.h  thread_affinity.h  thread_pool.h
include/kaguya/model/: hparams.h  loader.h  weights.h
include/kaguya/quantization/: gguf_loader.h  quantizer.h
include/kaguya/sampling/: sampler.h
include/kaguya/utils/: logging.h  timer.h
scripts/: create_pr.sh  setup_auth.sh  update_progress.sh
src/: main.cpp
src/api/: kaguya_c_api.cpp
src/cli/: main.cpp
src/core/: context.cpp  cpu_features.cpp  engine.cpp  model.cpp  tensor.cpp  tokenizer.cpp
src/inference/: attention.cpp  batch.cpp  kv_cache.cpp  pipeline.cpp
src/kernels/: activation.cpp  attention.cpp  cache_tuner.cpp  dispatcher.cpp  ffn.cpp  gemm_amx.cpp  gemm_avx2.cpp  gemm_avx512.cpp  gemm_scalar.cpp  mul_mat.cpp  norm.cpp  quantize.cpp  rmsnorm.cpp  rope.cpp  softmax.cpp  transformer.cpp
src/loaders/: gguf_loader.cpp  gguf_parser.cpp  gguf_tensor.cpp  model_loader.cpp
src/memory/: buf_manager.cpp  kv_cache.cpp  memory_manager.cpp  thread_affinity.cpp  thread_pool.cpp
src/model/: hparams.cpp  loader.cpp  weights.cpp
src/quantization/: gguf_loader.cpp  quantizer.cpp
src/runtime/: profiler.cpp
src/sampling/: repetition_penalty.cpp  sampler.cpp  temperature.cpp  top_k.cpp  top_p.cpp
src/utils/: logging.cpp  timer.cpp
tests/: CMakeLists.txt  amx_smoke_test.cpp  check_xcr0.cpp  run_asan.sh  test_gguf_loader.cpp
tests/integration/: test_inference.cpp
tests/unit/: test_accuracy.cpp  test_attention.cpp  test_c_api.cpp  test_cpu_features.cpp  test_gemm.cpp  test_gguf_parser.cpp  test_kv_cache.cpp  test_quantize.cpp  test_special_ops.cpp  test_stability.cpp  test_tokenizer.cpp
